# playwright-http

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.chainguard  LICENSE  README.md  UTML.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  osv-security.yml  tests.yml
executor/: __init__.py  actions.py  browser.py  element_finder.py  logging.py  main.py  recorder.py  recorder_script.js  runner.py
tests/: __init__.py  conftest.py  test_actions.py  test_browser_pure.py  test_element_finder.py  test_element_finder_async.py  test_integration.py  test_logging.py  test_main_endpoints.py  test_recorder.py  test_runner.py
