[project]
name = "playwright-http"
version = "0.1.0"
description = "Browser automation over HTTP - Execute Playwright tests via simple REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["executor"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "requests>=2.33.0",
    "pygments>=2.20.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpserver>=1.1.0",
    "pytest-playwright>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
